Subscribe route fix and layout update

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,13 @@
-extends layout
-
-block content
-  h1= title
+doctype html(lang='en')
+head
+    meta(charset='UTF-8')
+    |     
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    |     
+    meta(http-equiv='X-UA-Compatible', content='ie=edge')
+    |     
+    title Push Notification Generator
+  body
+    h1 Pushing notifications using Node.js
+    |     
+    script(src='client.js')
